maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:28: error: ':' expected but ',' found.
def arround(x,y,cpt) {
             ^JediEscaper:93: error: identifier expected but '}' found.
}
^